<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content" android:orientation="horizontal">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/copy_address"
            android:id="@+id/copy_address_button"
            android:background="@drawable/catalogue_button"
            android:textSize="6pt"/>


        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:background="@color/bpLine_dark"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/next"
            android:id="@+id/next_button"
            android:background="@drawable/catalogue_button"
            android:textSize="6pt"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout android:layout_width="match_parent"
                android:layout_height="wrap_content" android:orientation="horizontal">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/ic_login_username"/>
                <EditText
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:hint="@string/edit_text_hint_first_name"
                    android:id="@+id/edit_text_first_name"
                    android:textSize="6pt" />
            </LinearLayout>

            <LinearLayout android:layout_width="match_parent"
                android:layout_height="wrap_content" android:orientation="horizontal">
                <EditText
                    android:layout_marginLeft="50dp"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:hint="@string/edit_text_hint_last_name"
                    android:id="@+id/edit_text_last_name"
                    android:textSize="6pt"/>
            </LinearLayout>

            <LinearLayout android:layout_width="match_parent"
                android:layout_height="wrap_content" android:orientation="horizontal">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/ic_login_username"/>
                <EditText
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:hint="@string/edit_text_hint_phone"
                    android:inputType="phone"
                    android:id="@+id/edit_text_phone"
                    android:textSize="6pt" />
            </LinearLayout>

            <include layout="@layout/fragment_address" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>