<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bateeqshop.fragments.LoginFragment">

    <LinearLayout
        android:id="@+id/ll_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--<ImageView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="@dimen/login_title_margin_top"-->
            <!--android:paddingStart="@dimen/login_title_padding"-->
            <!--android:paddingLeft="@dimen/login_title_padding"-->
            <!--android:src="@drawable/ic_menu_camera"-->
            <!--android:scaleType="fitStart"/>-->

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_title_margin_top"
            android:layout_marginBottom="@dimen/login_title_margin_bottom"
            android:src="@drawable/logo_bateeq_shop"
            android:layout_gravity="center_horizontal"
            android:scaleType="fitStart"/>

        <com.facebook.login.widget.LoginButton
        android:id="@+id/btn_facebook_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

        <LinearLayout
            android:id="@+id/panel_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/login_layout_left_padding"
            android:paddingStart="@dimen/login_layout_left_padding"
            android:paddingRight="@dimen/login_layout_right_padding"
            android:paddingEnd="@dimen/login_layout_right_padding"
            android:gravity="center_horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:focusableInTouchMode="true"
                android:weightSum="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:src="@drawable/ic_login_username"/>

                <EditText
                    android:id="@+id/edit_text_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_text_hint_first_name"
                    android:gravity="start"
                    style="@style/LoginEditText" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:focusableInTouchMode="true"
                android:weightSum="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:src="@drawable/ic_login_username"/>

                <EditText
                    android:id="@+id/edit_text_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_text_hint_last_name"
                    android:gravity="start"
                    style="@style/LoginEditText"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:focusableInTouchMode="true"
                android:weightSum="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:src="@drawable/ic_login_username"/>

                <EditText
                    android:id="@+id/edit_text_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_text_hint_email"
                    android:inputType="textEmailAddress"
                    android:gravity="start"
                    style="@style/LoginEditText"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:focusableInTouchMode="true"
                android:weightSum="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:src="@drawable/ic_login_password"/>

                <EditText
                    android:id="@+id/edit_text_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_text_hint_password"
                    android:inputType="textPassword"
                    android:gravity="start"
                    style="@style/LoginEditText"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:focusableInTouchMode="true"
                android:weightSum="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:src="@drawable/ic_login_username"/>

                <EditText
                    android:id="@+id/edit_text_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_text_hint_phone_number"
                    android:inputType="phone"
                    android:gravity="start"
                    style="@style/LoginEditText"/>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_button_register_margin_top"
            android:layout_marginStart="@dimen/login_button_margin_left"
            android:layout_marginLeft="@dimen/login_button_margin_left"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:padding="@dimen/login_button_padding"
            android:background="@drawable/login_button_border"
            android:text="@string/button_register"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25sp"
            android:textAllCaps="false" />
    </LinearLayout>

    <include
        layout="@layout/view_progress"
        />

    <include
        layout="@layout/view_retry"
        />
</RelativeLayout>
